# lockit

./: Cargo.toml  README.md  build.rs
src/: compression.rs  crypto.rs  file_operations.rs  main.rs  pipe.rs
